fix spacing in aside

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,6 @@
 
 
 /* --- START: FINAL COOKIE POPUP CSS --- */
-
-/* This is the default, hidden state */
 #cookiePopup {
     visibility: hidden;
     /* Hide it completely */
@@ -225,9 +223,9 @@ header .flex-container {
 
 .recipe h2 {
     text-align: center;
-    font-size: clamp(2.074rem, 1.9454rem + 0.6431vw, 2.488rem);
+    /* font-size: clamp(2.074rem, 1.9454rem + 0.6431vw, 2.488rem);
     font-size: clamp(1.728rem, 1.6205rem + 0.5375vw, 2.074rem);
-    font-size: clamp(1.728rem, 1.4919rem + 1.1806vw, 2.488rem);
+    font-size: clamp(1.728rem, 1.4919rem + 1.1806vw, 2.488rem); */
     /* font-weight: 500; */
 }
 
@@ -605,7 +603,7 @@ footer .line-design-maxwidth {
 }
 
 .chili-info>.inner-container h3 {
-    margin-bottom: 2rem;
+    /* margin-bottom: 2rem; */
 }
 
 .chili-info>.inner-container p {
@@ -743,5 +741,9 @@ color: blue;
 }
 
 aside h2 {
-    font-size: clamp(1.728rem, 1.6205rem + 0.5375vw, 2.074rem);
+    /* font-size: clamp(1.728rem, 1.6205rem + 0.5375vw, 2.074rem); */
+}
+
+aside p {
+    margin-bottom: 1rem;
 }
